# ai-sdlc-context

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  NOTICE  README.md  SECURITY.md  mkdocs.yml  pyproject.toml  skills-lock.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  docs.yml
context_guard/: __init__.py  cli.py  decisions.py  engine.py  events.py  policy_config.py
context_guard/adapters/: claude_code.py  codex.py
context_guard/audit/: jsonl.py
context_guard/compact/: artifact_store.py  benchmark.py  ledger.py  pipeline.py  result.py  runner.py
context_guard/defaults/: policy.yaml
context_guard/policies/: commands.py  files.py  searches.py  sessions.py
docs/: compact-runtime.md  index.md  policy.md
specs/: specs-index.md
specs/001-context-guard/: decision-log.md  design.md  plan.md  qa.md  requirements.md  tasks.md  test-cases.md
specs/002-compact-runtime/: decision-log.md  design.md  plan.md  qa.md  requirements.md  tasks.md  test-cases.md
specs/_ai_sdlc/: specs-index.toon
tests/: test_engine.py
tests/adapters/: test_claude_code.py  test_codex.py
tests/audit/: test_jsonl.py
tests/cli/: test_compact_artifact_cmd.py  test_compact_test_cmd.py  test_doctor.py  test_init.py  test_install.py  test_report.py  test_selftest_cmd.py  test_sessions.py  test_test_cmd.py  test_validate.py
tests/compact/: test_artifact_store.py  test_benchmark_ctx01.py  test_ledger.py
tests/fixtures/: manifest.json
tests/perf/: test_latency.py
(+30 files in other folders)
