[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "context-guard"
version = "0.1.0"
description = "Local deterministic hook-based policy engine that reduces avoidable AI coding-agent context growth."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
dependencies = [
    "PyYAML>=6.0",
]

[project.urls]
Repository = "https://github.com/mikegorelikoff/ai-sdlc-context"
Issues = "https://github.com/mikegorelikoff/ai-sdlc-context/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]
docs = [
    "mkdocs-material>=9.5",
]

[project.scripts]
context-guard = "context_guard.cli:main"

[tool.setuptools.packages.find]
include = ["context_guard*"]

[tool.pytest.ini_options]
markers = [
    "perf: latency benchmark tests (excluded from default runs)",
]
addopts = "--ignore=tests/fixtures/compact"
